# mn2

./: CMakeLists.txt  README.md  a.c  b.c  c.c  gauss100.out  gauss1000.out  jacobi100.out  jacobi1000.out  makefile  memòria practica 1.md  sor1000_0.1.out  sor1000_0.3.out  sor1000_1.8.out  sor1000_1.out  sor100_0.2.out  sor100_1.8.out  sor100_1.9.out  sor100_5.out
Practica1/: a.c  b.c  c.c  gauss100.out  jacobi1000.out  memòria practica 1.md  sor1000_-5.out  sor1000_0.2.out  sor1000_1.9.out  sor1000_5.out  sor100_-5.out  sor100_0.1.out  sor100_0.3.out  sor100_1.out
Practica2/: CMakeLists.txt  a.c  b.c  c.c  d.c  e.c  g.c  tan.c
Practica2/output/: adams2.out  euler.out  euler_richardson.out  runge.out  runge_richardson.out  tan.out
